--- a/index.html
+++ b/index.html
@@ -20,36 +20,36 @@
   <body>
     <!-- хедер -->
     <header class="header">
-      <div class="container">
+      <div class="container container-header">
         <nav class="header-nav">
-          <a lang="en" class="logo" href=""
+          <a lang="en" class="logo" href="./index.html"
             ><span class="blue-logo">Web</span>Studio
           </a>
-          <ul class="header-menu-list list">
-            <li class="header-menu-item">
-              <a href="" class="link current header-link">Студия</a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a href="" class="link current header-link link">Студия</a>
             </li>
-            <li class="header-menu-item">
+            <li class="header-item">
               <a class="header-link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="header-menu-item">
+            <li class="header-item">
               <a class="header-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
         <!-- навигация авторизации -->
-        <ul class="header-contact-list list">
-          <li class="header-contact-item">
-            <a href="mailto:info@devstudio.com" class="header-mail link">
-              <svg class="header-icon" widht="21" height="16">
+        <ul class="header-auth list">
+          <li class="auth-item">
+            <a href="mailto:info@devstudio.com" class="header-contact link">
+              <svg class="header-icon" width="21" height="16">
                 <use href="./images/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="header-contact-item">
-            <a href="tel:+380961111111" class="header-tel link">
-              <svg class="icon-smartphone" widht="16" height="21">
+          <li class="auth-item">
+            <a href="tel:+380961111111" class="header-contact link">
+              <svg class="header-icon" width="16" height="21">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -75,7 +75,7 @@
           <ul class="feature-list list">
             <li class="feature-item">
               <div class="thumb">
-                <svg class="icon-antenna" widht="70" height="70">
+                <svg class="icon-antenna" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -87,7 +87,7 @@
             </li>
             <li class="feature-item">
               <div class="thumb">
-                <svg class="icon-clock" widht="70" height="70">
+                <svg class="icon-clock" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -99,7 +99,7 @@
             </li>
             <li class="feature-item">
               <div class="thumb">
-                <svg class="icon-diagram" widht="70" height="70">
+                <svg class="icon-diagram" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -111,7 +111,7 @@
             </li>
             <li class="feature-item">
               <div class="thumb">
-                <svg class="icon-astronaut" widht="70" height="70">
+                <svg class="icon-astronaut" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -149,31 +149,175 @@
           <h3 class="staff">Наша команда</h3>
           <ul class="staff-list list">
             <li class="staff-item">
-              <img src="./images/Igor.jpg" alt="Igor" width="270" />
+              <img src="./images/Igor.jpg" alt="Igor" wigth="270" />
               <div class="staff-id">
-                <h4 class="staff-title">Игорь Демьяненко</h4>
+                <h4 class="staff-title">Ігор Дем'яненко</h4>
                 <p class="staff-text">Product Designer</p>
+                <ul class="soc-list">
+                  <li class="soc-item">
+                    <a href="" class="soc-link link">
+                      <svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link">
+                      <svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link"
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link"
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="staff-item">
               <img src="./images/Olga.jpg" alt="Ольга" width="270" />
               <div class="staff-id">
-                <h4 class="staff-title">Ольга Репина</h4>
+                <h4 class="staff-title">Ольга Рєпіна</h4>
                 <p class="staff-text">Frontend Developer</p>
+                <ul class="soc-list">
+                  <li class="soc-item">
+                    <a href="" class="soc-link link">
+                      <svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link">
+                      <svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link"
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link"
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="staff-item">
               <img src="./images/Mykola.jpg" alt="Николай" width="270" />
               <div class="staff-id">
-                <h4 class="staff-title">Николай Тарасов</h4>
+                <h4 class="staff-title">Микола Тарасов</h4>
                 <p class="staff-text">Marketing</p>
+                <ul class="soc-list">
+                  <li class="soc-item">
+                    <a href="" class="soc-link link">
+                      <svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link">
+                      <svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link"
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link"
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="staff-item">
               <img src="./images/Mykhaylo.jpg" alt="Михаил" width="270" />
               <div class="staff-id">
-                <h4 class="staff-title">Михаил Ермаков</h4>
+                <h4 class="staff-title">Михайло рмаков</h4>
                 <p class="staff-text">UI Designer</p>
+                <ul class="soc-list">
+                  <li class="soc-item">
+                    <a href="" class="soc-link link">
+                      <svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link">
+                      <svg class="soc-icon" width="20" height="20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link"
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="" class="soc-link link"
+                      ><svg class="soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -185,8 +329,43 @@
       <ul class="client-list list">
         <li class="client-item">
           <div class="client">
-            <svg class="icon-Logo" widht="106" height="60">
-              <use href="./images/symbol-defs.svg#icon-Logo"></use>
+            <svg class="icon-logo" width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-logo"></use>
+            </svg>
+          </div>
+        </li>
+        <li class="client-item">
+          <div class="client">
+            <svg class="icon-logo" width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+            </svg>
+          </div>
+        </li>
+        <li class="client-item">
+          <div class="client">
+            <svg class="icon-logo" width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+            </svg>
+          </div>
+        </li>
+        <li class="client-item">
+          <div class="client">
+            <svg class="icon-logo" width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+            </svg>
+          </div>
+        </li>
+        <li class="client-item">
+          <div class="client">
+            <svg class="icon-logo" width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+            </svg>
+          </div>
+        </li>
+        <li class="client-item">
+          <div class="client">
+            <svg class="icon-logo" width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-logo-6"></use>
             </svg>
           </div>
         </li>
@@ -223,8 +402,5 @@
         </address>
       </div>
     </footer>
-    <svg>
-      <use href="./images/symbol-defs.svg#logo"></use>
-    </svg>
   </body>
 </html>
