--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <section class="section-title section">
         <div class="container">
           <!-- чем мы занимаемся -->
-          <h3 class="work">Чем мы занимаемся</h3>
+          <h3 class="work">Чим ми займаємося</h3>
           <ul class="work-list list">
             <li class="work-item">
               <img src="./images/decktop.jpg" alt="компьютер" width="370" />
@@ -149,7 +149,7 @@
           <h3 class="staff">Наша команда</h3>
           <ul class="staff-list list">
             <li class="staff-item">
-              <img src="./images/Igor.jpg" alt="Igor" wigth="270" />
+              <img src="./images/Igor.jpg" alt="Ігор" width="270" />
               <div class="staff-id">
                 <h4 class="staff-title">Ігор Дем'яненко</h4>
                 <p class="staff-text">Product Designer</p>
@@ -328,56 +328,68 @@
       <h3 class="client-title">Постійні клієнти</h3>
       <ul class="client-list list">
         <li class="client-item">
-          <div class="client">
-            <svg class="icon-logo" width="106" height="60">
-              <use href="./images/symbol-defs.svg#icon-logo"></use>
-            </svg>
-          </div>
+          <a href="" class="client-link link">
+            <div class="client">
+              <svg class="icon-logo" width="106" height="60">
+                <use href="./images/symbol-defs.svg#icon-logo"></use>
+              </svg>
+            </div>
+          </a>
         </li>
         <li class="client-item">
-          <div class="client">
-            <svg class="icon-logo" width="106" height="60">
-              <use href="./images/symbol-defs.svg#icon-logo-2"></use>
-            </svg>
-          </div>
+          <a href="" class="client-link link">
+            <div class="client">
+              <svg class="icon-logo" width="106" height="60">
+                <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+              </svg>
+            </div>
+          </a>
         </li>
         <li class="client-item">
-          <div class="client">
-            <svg class="icon-logo" width="106" height="60">
-              <use href="./images/symbol-defs.svg#icon-logo-3"></use>
-            </svg>
-          </div>
+          <a href="" class="client-link link">
+            <div class="client">
+              <svg class="icon-logo" width="106" height="60">
+                <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+              </svg>
+            </div>
+          </a>
         </li>
         <li class="client-item">
-          <div class="client">
-            <svg class="icon-logo" width="106" height="60">
-              <use href="./images/symbol-defs.svg#icon-logo-4"></use>
-            </svg>
-          </div>
+          <a href="" class="client-link link">
+            <div class="client">
+              <svg class="icon-logo" width="106" height="60">
+                <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+              </svg>
+            </div>
+          </a>
         </li>
         <li class="client-item">
-          <div class="client">
-            <svg class="icon-logo" width="106" height="60">
-              <use href="./images/symbol-defs.svg#icon-logo-5"></use>
-            </svg>
-          </div>
+          <a href="" class="client-link link">
+            <div class="client">
+              <svg class="icon-logo" width="106" height="60">
+                <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+              </svg>
+            </div>
+          </a>
         </li>
         <li class="client-item">
-          <div class="client">
-            <svg class="icon-logo" width="106" height="60">
-              <use href="./images/symbol-defs.svg#icon-logo-6"></use>
-            </svg>
-          </div>
+          <a href="" class="client-link link">
+            <div class="client">
+              <svg class="icon-logo" width="106" height="60">
+                <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+              </svg>
+            </div>
+          </a>
         </li>
       </ul>
     </div>
     <!-- футер -->
     <footer class="footer">
-      <div class="container logo-container">
-        <a lang="en" class="footer-logo" href="./index.html"
-          ><span class="blue-logo">Web</span>Studio
-        </a>
-        <address class="address">
+      <div class="footer-container container">
+        <div class="contact-wrap">
+          <a lang="en" class="footer-logo" href="./index.html"
+            ><span class="blue-logo">Web</span>Studio
+          </a>
           <ul class="address-list list">
             <li>
               <a
@@ -399,7 +411,41 @@
               >
             </li>
           </ul>
-        </address>
+        </div>
+
+        <div class="join">
+          <p class="footer-text">ПРИЄДНУЙТЕСЬ</p>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
