--- a/portfolio.html
+++ b/portfolio.html
@@ -38,22 +38,26 @@
           </ul>
         </nav>
         <!-- навигация авторизации -->
-
         <ul class="header-auth list">
           <li class="auth-item">
-            <a href="mailto:info@devstudio.com" class="header-contact link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="header-contact link">
+              <svg class="header-icon" width="21" height="16">
+                <use href="./images/symbol-defs.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="auth-item">
-            <a href="tel:+380961111111" class="header-contact link"
-              >+38 096 111 11 11</a
+            <a href="tel:+380961111111" class="header-contact link">
+              <svg class="header-icon" width="16" height="21">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
       </div>
     </header>
-
     <main class="main-portfolio">
       <section class="section-portfolio">
         <div class="container">
@@ -194,11 +198,11 @@
     </main>
     <!--футер -->
     <footer class="footer">
-      <div class="container">
-        <a lang="en" class="footer-logo" href="./index.html"
-          ><span class="blue-logo">Web</span>Studio
-        </a>
-        <address class="address">
+      <div class="footer-container container">
+        <div class="contact-wrap">
+          <a lang="en" class="footer-logo" href="./index.html"
+            ><span class="blue-logo">Web</span>Studio
+          </a>
           <ul class="address-list list">
             <li>
               <a
@@ -220,7 +224,41 @@
               >
             </li>
           </ul>
-        </address>
+        </div>
+
+        <div class="join">
+          <p class="footer-text">ПРИЄДНУЙТЕСЬ</p>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
