--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         <ul class="header-auth list">
           <li class="auth-item">
             <a href="mailto:info@devstudio.com" class="header-contact link">
-              <svg class="header-icon" width="21" height="16">
+              <svg class="header-icon" width="16" height="12">
                 <use href="./images/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
@@ -49,7 +49,7 @@
           </li>
           <li class="auth-item">
             <a href="tel:+380961111111" class="header-contact link">
-              <svg class="header-icon" width="16" height="21">
+              <svg class="header-icon" width="10" height="16">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -91,106 +91,123 @@
           <!-- карточки портфолио -->
           <ul class="picture-list list">
             <li class="picture-item">
-              <img src="./images/Technokryak.jpg" alt="Технокряк" width="370" />
-              <div class="card-content">
-                <h2 class="picture-title">Технокряк</h2>
-                <p class="picture-text">Веб-сайт</p>
-              </div>
-            </li>
-
-            <li class="picture-item">
-              <img
-                src="./images/Basket-poster.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-              />
-              <div class="card-content">
-                <h2 class="picture-title">Постер New Orlean vs Golden Star</h2>
-                <p class="picture-text">Дизайн</p>
-              </div>
-            </li>
-
-            <li class="picture-item">
-              <img
-                src="./images/Restaurant.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-              />
-              <div class="card-content">
-                <h2 class="picture-title">Ресторан Seafood</h2>
-                <p class="picture-text">Приложение</p>
-              </div>
-            </li>
-
-            <li class="picture-item">
-              <img
-                src="./images/Project-prime.jpg"
-                alt="Проект Prime"
-                width="370"
-              />
-              <div class="card-content">
-                <h2 class="picture-title">Проект Prime</h2>
-                <p class="picture-text">Маркетинг</p>
-              </div>
-            </li>
-
-            <li class="picture-item">
-              <img
-                src="./images/Project-box.jpg"
-                alt="Проект Prime"
-                width="370"
-              />
-              <div class="card-content">
-                <h2 class="picture-title">Проект Boxes</h2>
-                <p class="picture-text">Приложение</p>
-              </div>
-            </li>
-
-            <li class="picture-item">
-              <img
-                src="./images/Inspriration.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-              />
-              <div class="card-content">
-                <h2 class="picture-title">Inspiration has no Borders</h2>
-                <p class="picture-text">Веб-сайт</p>
-              </div>
-            </li>
-
-            <li class="picture-item">
-              <img
-                src="./images/Publication.jpg"
-                alt="Издание Limited Edition"
-                width="370"
-              />
-              <div class="card-content">
-                <h2 class="picture-title">Издание Limited Edition</h2>
-                <p class="picture-text">Дизайн</p>
-              </div>
+              <a href="" class="picture-link">
+                <img
+                  src="./images/Technokryak.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">Технокряк</h2>
+                  <p class="picture-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="picture-item">
-              <img
-                src="./images/Project-lab.jpg"
-                alt="Проект LAB"
-                width="370"
-              />
-              <div class="card-content">
-                <h2 class="picture-title">Проект LAB</h2>
-                <p class="picture-text">Маркетинг</p>
-              </div>
+              <a href="" class="picture-link">
+                <img
+                  src="./images/Basket-poster.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="picture-text">Дизайн</p>
+                </div>
+              </a>
             </li>
-
             <li class="picture-item">
-              <img
-                src="./images/business.jpg"
-                alt="Growing Business"
-                width="370"
-              />
-              <div class="card-content">
-                <h2 class="picture-title">Growing Business</h2>
-                <p class="picture-text">Приложение</p>
-              </div>
+              <a href="" class="picture-link">
+                <img
+                  src="./images/Restaurant.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">Ресторан Seafood</h2>
+                  <p class="picture-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="picture-item">
+              <a href="" class="picture-link">
+                <img
+                  src="./images/Project-prime.jpg"
+                  alt="Проект Prime"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">Проект Prime</h2>
+                  <p class="picture-text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="picture-item">
+              <a href="" class="picture-link">
+                <img
+                  src="./images/Project-box.jpg"
+                  alt="Проект Prime"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">Проект Boxes</h2>
+                  <p class="picture-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="picture-item">
+              <a href="" class="picture-link">
+                <img
+                  src="./images/Inspriration.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">Inspiration has no Borders</h2>
+                  <p class="picture-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="picture-item">
+              <a href="" class="picture-link">
+                <img
+                  src="./images/Publication.jpg"
+                  alt="Издание Limited Edition"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">Издание Limited Edition</h2>
+                  <p class="picture-text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="picture-item">
+              <a href="" class="picture-link">
+                <img
+                  src="./images/Project-lab.jpg"
+                  alt="Проект LAB"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">Проект LAB</h2>
+                  <p class="picture-text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="picture-item">
+              <a href="" class="picture-link">
+                <img
+                  src="./images/business.jpg"
+                  alt="Growing Business"
+                  width="370"
+                />
+                <div class="card-content">
+                  <h2 class="picture-title">Growing Business</h2>
+                  <p class="picture-text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
