--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul class="header-auth list">
           <li class="auth-item">
             <a href="mailto:info@devstudio.com" class="header-contact link">
-              <svg class="header-icon" width="21" height="16">
+              <svg class="header-icon" width="16" height="12">
                 <use href="./images/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
@@ -49,7 +49,7 @@
           </li>
           <li class="auth-item">
             <a href="tel:+380961111111" class="header-contact link">
-              <svg class="header-icon" width="16" height="21">
+              <svg class="header-icon" width="10" height="16">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -323,66 +323,57 @@
           </ul>
         </div>
       </section>
+      <!-- постоянные клиенты -->
+      <section class="clients">
+        <div class="container">
+          <h3 class="client-title">Постійні клієнти</h3>
+          <ul class="client-list list">
+            <li class="client-item">
+              <a href="" class="client-link link">
+                <svg class="icon-logo" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link link">
+                <svg class="icon-logo" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link link">
+                <svg class="icon-logo" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link link">
+                <svg class="icon-logo" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link link">
+                <svg class="icon-logo" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link link">
+                <svg class="icon-logo" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-    <div class="container">
-      <h3 class="client-title">Постійні клієнти</h3>
-      <ul class="client-list list">
-        <li class="client-item">
-          <a href="" class="client-link link">
-            <div class="client">
-              <svg class="icon-logo" width="106" height="60">
-                <use href="./images/symbol-defs.svg#icon-logo"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-        <li class="client-item">
-          <a href="" class="client-link link">
-            <div class="client">
-              <svg class="icon-logo" width="106" height="60">
-                <use href="./images/symbol-defs.svg#icon-logo-2"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-        <li class="client-item">
-          <a href="" class="client-link link">
-            <div class="client">
-              <svg class="icon-logo" width="106" height="60">
-                <use href="./images/symbol-defs.svg#icon-logo-3"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-        <li class="client-item">
-          <a href="" class="client-link link">
-            <div class="client">
-              <svg class="icon-logo" width="106" height="60">
-                <use href="./images/symbol-defs.svg#icon-logo-4"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-        <li class="client-item">
-          <a href="" class="client-link link">
-            <div class="client">
-              <svg class="icon-logo" width="106" height="60">
-                <use href="./images/symbol-defs.svg#icon-logo-5"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-        <li class="client-item">
-          <a href="" class="client-link link">
-            <div class="client">
-              <svg class="icon-logo" width="106" height="60">
-                <use href="./images/symbol-defs.svg#icon-logo-6"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-      </ul>
-    </div>
     <!-- футер -->
     <footer class="footer">
       <div class="footer-container container">
